Fix vertical overflow issues

--- a/app/App.css
+++ b/app/App.css
@@ -39,6 +39,7 @@ html {
   /*display: flex;*/
   height: 100vh;
   width: 100vw;
+  overflow: hidden;
   /*flex: 1;*/
 }
 
@@ -46,6 +47,7 @@ body, #root {
   /*display: flex;*/
   height: 100%;
   width: 100%;
+  overflow: hidden;
   /*flex: 1;*/
 }
 
